syntax = "proto3";

option go_package = "proto/encounter";

service Encounter {
    rpc CreateSocialEncounter(SocialEnocunter) returns (SocialEnocunter) {}    
}

message SocialEnocunter {
        string encounterId = 1;
        string name = 2;
        string description = 3;
        int32 xpPoints = 4;
        string status = 5;
        string type = 6;
        double latitude = 7;
        double longitude = 8;
        string id = 9;
        int32 touristsRequiredForCompletion = 10;
        double distanceTreshold = 11;
        repeated int64 touristIDs = 12;
        bool shouldBeApproved = 13;
}